--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".activity.SplashActivity"
-            android:theme="@style/SplashTheme" />
+            android:theme="@style/SplashTheme" >
+        </activity>
         <activity android:name=".activity.LoginActivity" />
         <activity
             android:name=".activity.MainActivity"
