add encrypt class and modify some errors

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,14 +2,6 @@ apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
 
 android {
-    signingConfigs {
-        config {
-            keyAlias 'key0'
-            keyPassword 'kihome'
-            storeFile file('/Users/YueMa/AndroidStudioProjects/ihome/keystore.jks')
-            storePassword 'skihome'
-        }
-    }
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
@@ -49,4 +41,5 @@ dependencies {
     compile files('libs/BaiduLBS_Android.jar')
     compile 'com.jakewharton:butterknife:8.7.0'
     apt 'com.jakewharton:butterknife-compiler:8.7.0'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
 }
