--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,13 +18,13 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.BROADCAST_STICKY" />
 
-    <!--BaiduMap permission-->
+    <!-- BaiduMap permission -->
     <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:name=".IhomeApplication"
@@ -35,17 +35,14 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".activity.SplashActivity"
-            android:theme="@style/SplashTheme"/>
-
-        <activity android:name=".activity.LoginActivity" >
-
-        </activity>
-      
+            android:theme="@style/SplashTheme" />
+        <activity android:name=".activity.LoginActivity"></activity>
         <activity
             android:name=".activity.MainActivity"
             android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -60,13 +57,13 @@
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="R6nE16pZMKymjr58SMBAPsU3wC8BD9RY" />
+
         <service
             android:name="com.baidu.location.f"
             android:enabled="true"
-            android:process=":remote" >
-        </service>
+            android:process=":remote"></service>
 
-        <activity android:name=".activity.BindLockActivity"></activity>
+        <activity android:name=".activity.BindLockActivity" />
         <activity
             android:name=".activity.BluetoothScanActivity"
             android:windowSoftInputMode="adjustPan" />
@@ -76,8 +73,10 @@
             android:singleUser="true" />
         <service android:name=".ble.profile.BLECommandService" />
 
-        <activity android:name=".activity.LockDetailActivity"
-            android:launchMode="singleTop"></activity>
+        <activity
+            android:name=".activity.LockDetailActivity"
+            android:launchMode="singleTop" />
+        <activity android:name=".activity.UserInfoActivity"></activity>
     </application>
 
 </manifest>
