--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
-        android:name=".IhomeApplication"
+        android:name=".application.IhomeApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_car"
         android:label="@string/app_name"
