--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,13 +36,13 @@
         <activity
             android:name=".activity.SplashActivity"
             android:theme="@style/SplashTheme" />
-        <activity android:name=".activity.LoginActivity">
-        </activity>
+        <activity android:name=".activity.LoginActivity"></activity>
         <activity
             android:name=".activity.MainActivity"
             android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -77,7 +77,8 @@
             android:name=".activity.LockDetailActivity"
             android:launchMode="singleTop" />
         <activity android:name=".activity.UserInfoActivity" />
-        <activity android:name=".activity.ParkingListActivity"></activity>
+        <activity android:name=".activity.ParkingListActivity" />
+        <activity android:name=".pay.payActivity"></activity>
     </application>
 
 </manifest>
