--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,6 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-    <uses-permission android:name="android.permission.READ_SMS"/>
     <application
         android:name=".application.IhomeApplication"
         android:allowBackup="true"
@@ -36,18 +35,16 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".activity.SplashActivity"
-            android:theme="@style/SplashTheme" />
-        <activity android:name=".activity.LoginActivity">
+            android:theme="@style/SplashTheme"></activity>
+        <activity android:name=".activity.LoginActivity"></activity>
+        <activity
+            android:name=".activity.MainActivity"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".activity.MainActivity"
-            android:launchMode="singleTask">
-
         </activity>
 
         <!-- 通过AndroidManifest配置AppKey和AppSecret，如果你选择通过代码配置，则不需要配置以下meta-data -->
@@ -81,9 +78,7 @@
             android:launchMode="singleTop" />
         <activity android:name=".activity.UserInfoActivity" />
         <activity android:name=".activity.ParkingListActivity" />
-
-
-
+        <activity android:name=".activity.PublishParkingActivity"></activity>
     </application>
 
 </manifest>
