feat(ParkFragment):add navigation module

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -107,7 +107,8 @@
         <activity android:name=".activity.UserInfoActivity" />
         <activity android:name=".activity.ParkingListActivity" />
         <activity android:name=".activity.PublishParkingActivity" />
-        <activity android:name=".activity.OrderListActivity"></activity>
+        <activity android:name=".activity.OrderListActivity" />
+        <activity android:name=".activity.NaviGuideActivity"></activity>
     </application>
 
 </manifest>
