--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -99,8 +99,7 @@
         <activity
             android:name=".activity.LockDetailActivity"
             android:launchMode="singleTop" />
-        <activity android:name=".activity.UserInfoActivity"
-            android:windowSoftInputMode="adjustPan|stateHidden"/>
+        <activity android:name=".activity.UserInfoActivity" />
         <activity android:name=".activity.ParkingListActivity" />
         <activity android:name=".activity.PublishParkingActivity" />
         <activity android:name=".activity.OrderListActivity" />
