--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,8 @@ dependencies {
     apt 'com.jakewharton:butterknife-compiler:8.7.0'
     compile 'com.contrarywind:Android-PickerView:3.2.5'
     compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.0.2'
-    compile ('org.eclipse.paho:org.eclipse.paho.android.service:1.0.2') {
+    compile 'com.github.arimorty:floatingsearchview:2.1.1'
+    compile('org.eclipse.paho:org.eclipse.paho.android.service:1.0.2') {
         exclude module: 'support-v4'
     }
 }
