--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -108,10 +108,11 @@
 
         <service
             android:name=".lock.ConnectLockService"
-            android:exported="false"/>
+            android:exported="false" />
+        <service android:name="org.eclipse.paho.android.service.MqttService" />
 
-        <service android:name="org.eclipse.paho.android.service.MqttService"/>
-
+        <activity android:name=".activity.SettingActivity"></activity>
+        <activity android:name=".activity.MapSearchActivity"></activity>
     </application>
 
 </manifest>
