--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -113,6 +113,7 @@
 
         <activity android:name=".activity.SettingActivity"></activity>
         <activity android:name=".activity.MapSearchActivity"></activity>
+        <activity android:name=".activity.ServiceContractActivity"></activity>
     </application>
 
 </manifest>
