--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,5 @@ dependencies {
     compile 'com.github.arimorty:floatingsearchview:2.1.1'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.7.0'
+    compile 'com.github.arcadefire:nice-spinner:1.2'
 }
