--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,7 +56,7 @@
     <application
         android:name=".application.IhomeApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher_car"
+        android:icon="@mipmap/ic_launcher_logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
