--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -112,7 +112,8 @@
         <activity android:name=".activity.SettingActivity" />
         <activity android:name=".activity.MapSearchActivity" />
         <activity android:name=".activity.ServiceContractActivity" />
-        <activity android:name=".activity.FeedbackActivity" />
+        <activity android:name=".activity.FeedbackActivity"
+            android:windowSoftInputMode="stateVisible"/>
         <activity android:name=".activity.CityActivity"></activity>
     </application>
 
