--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,17 @@ buildscript {
     }
 }
 
+buildscript {
+    repositories {
+        jcenter()
+        mavenCentral() // add repository
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2' // add plugin
+    }
+}
+
 allprojects {
     repositories {
         jcenter()
