--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -122,6 +122,7 @@
 
         <activity android:name=".activity.PayActivity" />
         <activity android:name=".activity.ParkingTimelineActivity" />
+        <activity android:name=".activity.ReserveActivity"></activity>
     </application>
 
 </manifest>
