--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,5 @@ dependencies {
     compile 'com.ericliu.asyncexpandablelist:asyncexpandablelist:1.1.0'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.7.0'
+    compile 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
 }
