--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -101,13 +101,6 @@
 
         <activity android:name=".activity.ReserveListActivity" />
 
-        <service
-            android:name=".lock.ConnectLockService"
-            android:exported="false" />
-        <service
-            android:name="org.eclipse.paho.android.service.MqttService"
-            android:exported="false" />
-
         <activity android:name=".activity.SettingActivity" />
         <activity android:name=".activity.MapSearchActivity" />
         <activity android:name=".activity.ServiceContractActivity" />
@@ -145,6 +138,20 @@
             android:windowSoftInputMode="adjustResize|stateHidden"></activity>
         <activity android:name=".activity.AboutActivity" />
         <activity android:name=".activity.OfficialWebActivity"></activity>
+
+        <!-- The following are services: -->
+        <service
+            android:name=".lock.ble.profile.BLECommandService"/>
+
+        <service
+            android:name=".lock.ble.profile.HostAppService"/>
+
+        <service
+            android:name=".lock.ConnectLockService"
+            android:exported="false" />
+        <service
+            android:name="org.eclipse.paho.android.service.MqttService"
+            android:exported="false" />
     </application>
 
 </manifest>
