--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,8 +61,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.LoginActivity"
-            android:windowSoftInputMode="stateVisible"/>
+        <activity
+            android:name=".activity.LoginActivity"
+            android:windowSoftInputMode="stateVisible" />
         <activity
             android:name=".activity.MainActivity"
             android:launchMode="singleTask" />
@@ -149,7 +150,8 @@
             android:name="org.eclipse.paho.android.service.MqttService"
             android:exported="false" />
 
-        <activity android:name=".activity.ReserveActivity"></activity>
+        <activity android:name=".activity.ReserveActivity" />
+        <activity android:name=".activity.PaySuccessActivity"></activity>
     </application>
 
 </manifest>
