--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,14 @@ apply plugin: 'android-apt'
 apply plugin: 'org.greenrobot.greendao'
 
 android {
+    signingConfigs {
+        debug {
+            keyAlias 'key_debug'
+            keyPassword '123456'
+            storeFile file('/Users/YueMa/AndroidStudioProjects/ihome/keystoredebug.jks')
+            storePassword '123456'
+        }
+    }
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
     defaultConfig {
@@ -18,15 +26,16 @@ android {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            signingConfig signingConfigs.debug
+        }
     }
-
     productFlavors {
         development {
             minSdkVersion 19
             resConfigs("zh", "hdpi")
         }
     }
-
     if (project.hasProperty('devBuild')) {
         aaptOptions.cruncherEnabled = false
     }
