--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,12 @@ android {
             storeFile file('/Users/YueMa/AndroidStudioProjects/ihome/keystoredebug.jks')
             storePassword '123456'
         }
+        release {
+            keyAlias 'key_release'
+            keyPassword '123456'
+            storeFile file('/Users/YueMa/AndroidStudioProjects/ihome/keystorerelease.jks')
+            storePassword '123456'
+        }
     }
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
@@ -23,19 +29,15 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
         debug {
             signingConfig signingConfigs.debug
         }
     }
-    productFlavors {
-        development {
-            minSdkVersion 19
-            resConfigs("zh", "hdpi")
-        }
-    }
+
     if (project.hasProperty('devBuild')) {
         aaptOptions.cruncherEnabled = false
     }
@@ -80,7 +82,7 @@ dependencies {
     compile 'com.github.myinnos:AlphabetIndex-Fast-Scroll-RecyclerView:1.0.8'
     compile 'org.greenrobot:greendao:3.2.2'
     compile 'com.ericliu.asyncexpandablelist:asyncexpandablelist:1.1.0'
-    compile 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
+    compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.7.0'
 }
