--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,20 +3,6 @@ apply plugin: 'android-apt'
 apply plugin: 'org.greenrobot.greendao'
 
 android {
-    signingConfigs {
-        debug {
-            keyAlias 'key_debug'
-            keyPassword '123456'
-            storeFile file('/Users/YueMa/AndroidStudioProjects/ihome/keystoredebug.jks')
-            storePassword '123456'
-        }
-        release {
-            keyAlias 'key_release'
-            keyPassword '123456'
-            storeFile file('/Users/YueMa/AndroidStudioProjects/ihome/keystorerelease.jks')
-            storePassword '123456'
-        }
-    }
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
     defaultConfig {
@@ -27,9 +13,23 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+    signingConfigs {
+        release {
+            keyAlias 'key_release'
+            keyPassword '123456'
+            storeFile file('/Users/xiang/AndroidStudioProjects/Ihome/keystorerelease.jks')
+            storePassword '123456'
+        }
+        debug {
+            keyAlias 'key_debug'
+            keyPassword '123456'
+            storeFile file('/Users/xiang/AndroidStudioProjects/Ihome/keystoredebug.jks')
+            storePassword '123456'
+        }
+    }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
         }
@@ -45,7 +45,7 @@ android {
 
 repositories {
     maven {
-        url "http://repo.eclipse.org/content/repositories/paho-snapshots/"
+        url "https://repo.eclipse.org/content/repositories/paho-snapshots/"
     }
 }
 
@@ -61,7 +61,6 @@ dependencies {
     compile('org.eclipse.paho:org.eclipse.paho.android.service:1.0.2') {
         exclude module: 'support-v4'
     }
-    compile files('libs/alipaySdk-20170725.jar')
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -73,7 +72,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     compile 'com.afollestad.material-dialogs:core:0.9.4.5'
-    compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.contrarywind:Android-PickerView:3.2.6'
     compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.0.2'
     compile 'com.github.arimorty:floatingsearchview:2.1.1'
