feat(payActivity): update new api

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -161,6 +161,7 @@
         </receiver>
 
         <activity android:name=".wxapi.WXPayEntryActivity"
+            android:theme="@style/TranslucentTheme"
             android:exported="true">
         </activity>
     </application>
