--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,7 @@
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -141,13 +142,12 @@
         <!-- The following are services: -->
         <service android:name=".lock.ble.profile.BLECommandService" />
         <service android:name=".lock.ble.profile.HostAppService" />
-
-        <service android:name=".lock.bluetooth.BluetoothManagerService"
-                 android:exported="false"/>
-
-        <service android:name=".lock.gateway.MqttManagerService"
-            android:exported="false"/>
-
+        <service
+            android:name=".lock.bluetooth.BluetoothManagerService"
+            android:exported="false" />
+        <service
+            android:name=".lock.gateway.MqttManagerService"
+            android:exported="false" />
         <service
             android:name="org.eclipse.paho.android.service.MqttService"
             android:exported="false" />
@@ -163,10 +163,11 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".wxapi.WXPayEntryActivity"
-            android:theme="@style/TranslucentTheme"
-            android:exported="true">
-        </activity>
+        <activity
+            android:name=".wxapi.WXPayEntryActivity"
+            android:exported="true"
+            android:theme="@style/TranslucentTheme" />
+        <activity android:name=".activity.JoinOwnerActivity"></activity>
     </application>
 
 </manifest>
