refactor(fragment_park.xml): put the Onclick on FrameLayout

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,8 @@ captures/
 .idea/codeStyleSettings.xml
 
 # Keystore files
+keystoredebug.jks
+keystorerelease.jks
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
